--- a/anionwm-3/anion-3plus/utils/ion-completefile/Makefile
+++ b/anionwm-3/anion-3plus/utils/ion-completefile/Makefile
@@ -16,6 +16,8 @@ LIBS += $(LIBTU_LIBS)
 INCLUDES += $(LIBTU_INCLUDES)
 CFLAGS += $(XOPEN_SOURCE) $(C99_SOURCE)
 
+TO_CLEAN=ion-completefile
+
 ######################################
 
 include $(TOPDIR)/build/rules.mk
