--- a/anionwm-3/anion-3plus/utils/ion-completeman.in
+++ b/anionwm-3/anion-3plus/utils/ion-completeman.in
@@ -104,7 +104,7 @@ scan() {
 cachefile=""
 
 if test "x$HOME" != x; then
-    usercache="$HOME/.ion3/mancache"
+    usercache="$HOME/.anion3/mancache"
 fi
 
 vardir=${ION_VAR_PATH-@VARDIR@}
