--- a/arch-hg-pkgbuilds/anion-libextl-3/PKGBUILD
+++ b/arch-hg-pkgbuilds/anion-libextl-3/PKGBUILD
@@ -5,7 +5,7 @@ pkgdesc="anion libextl 3"
 arch=(i686 x86_64)
 url="http://code.google.com/p/anion3/"
 license=('GPL2')
-depends=()
+makedepends=(libtu-3)
 makedepends=('mercurial')
 provides=(libextl libextl-3)
 conflicts=(libextl libextl-3)
