--- a/anionwm-3/anionwm-3/doc/Makefile
+++ b/anionwm-3/anionwm-3/doc/Makefile
@@ -19,6 +19,11 @@ FNTEXES=ioncore.exports mod_tiling.exports \
 	mod_query.exports de.exports mod_menu.exports \
 	mod_dock.exports mod_sp.exports mod_statusbar.exports
 
+TEXSOURCES=conf-bindings.tex confintro.tex conf-menus.tex conf-statusbar.tex \
+	conf.tex conf-winprops.tex cstyle.tex designnotes.tex de.tex fdl.tex \
+	fnref.tex fullhierarchy.tex hookref.tex ionconf.tex ionnotes.tex luaif.tex \
+	macros.tex miscref.tex objectsimpl.tex objects.tex prelim.tex statusd.tex tricks.tex
+
 RUBBER_DVI=rubber
 RUBBER_PS=rubber -p
 RUBBER_PDF=rubber -d
@@ -29,30 +34,32 @@ TARGETS = ionconf ionnotes
 # Generic rules
 ######################################
 
-nothing:
-	@ echo "Please read the README first."
+default: all
 
-%-dvi:
+%-dvi: $(TEXSOURCES)
 	$(RUBBER_DVI) $*
-	
-%-ps:
-	$(RUBBER_PS) $*
+	touch $@
 
-%-pdf:
+%-ps: $(TEXSOURCES)
+	$(RUBBER_PS) $*
+	touch $@
+
+%-pdf: $(TEXSOURCES)
 	$(RUBBER_PDF) $*
+	touch $@
 
 # Install
 ######################################
 
-install:
+install: all
 	$(INSTALLDIR) $(DOCDIR); \
 	for d in $(DOCS); do \
 	    for e in ps pdf dvi; do \
 	      test -f $$d.$$e && $(INSTALL) -m $(DATA_MODE) $$d.$$e $(DOCDIR); \
-            done; \
+	    done; \
 	    $(INSTALLDIR) $(DOCDIR)/$$d; \
-            for i in $$d/*; do \
-                $(INSTALL) -m $(DATA_MODE) $$i $(DOCDIR)/$$i; \
+	    for i in $$d/*; do \
+	        $(INSTALL) -m $(DATA_MODE) $$i $(DOCDIR)/$$i; \
 	    done; \
 	    rm -f $(DOCDIR)/$$d/*.log; \
 	    rm -f $(DOCDIR)/$$d/WARNINGS; \
@@ -60,23 +67,25 @@ install:
 	    rm -f $(DOCDIR)/$$d/*.idx; \
 	    rm -f $(DOCDIR)/$$d/*.tex; \
 	    rm -f $(DOCDIR)/$$d/*.pl; \
-        done
+	done
 
 # ionconf rules
 ######################################
 
-ionconf-dvi: fnlist.tex
-ionconf-ps: fnlist.tex
-ionconf-pdf: fnlist.tex
+ionconf-dvi: fnlist.tex $(TEXSOURCES)
+ionconf-ps: fnlist.tex $(TEXSOURCES)
+ionconf-pdf: fnlist.tex $(TEXSOURCES)
 
-ionconf-html: $(FNTEXES)
+ionconf-html: $(FNTEXES) $(TEXSOURCES)
 	$(L2H) -split 3 ionconf
+	touch ionconf-html
 
 # ionnotes rules
 ######################################
 
-ionnotes-html: 
+ionnotes-html: $(TEXSOURCES)
 	$(L2H) -split 4 ionnotes
+	touch ionnotes-html
 
 # More generic rules
 ######################################
@@ -93,7 +102,6 @@ all-pdf: $(patsubst %, %-pdf, $(TARGETS))
 
 all-html: $(patsubst %, %-html, $(TARGETS))
 
-
 # Clean
 ######################################
 
@@ -103,11 +111,12 @@ clean:
 	rm -f *.idx *.ild *.ilg *.ind
 	rm -f *.ps *.ps.gz *.dvi *.dvi.gz *.pdf
 	rm -rf ionconf ionnotes
-        
+	rm -f ionconf-{dvi,html,ps,pdf}
+	rm -f ionnotes-{dvi,html,ps,pdf}
+
 realclean: clean
 	rm -f *.ps *.pdf *.dvi
 	rm -rf $(DOCS)
-
 
 # Function reference rules
 ######################################
