--- a/anionwm-3/anionwm-3/Makefile
+++ b/anionwm-3/anionwm-3/Makefile
@@ -12,7 +12,7 @@ include modulelist.mk
 
 INSTALL_SUBDIRS=\
 	$(MODULE_LIST) \
-	ioncore ion pwm etc utils man po \
+	ioncore ion pwm etc utils man po doc \
 	
 
 SUBDIRS = $(LIBS_SUBDIRS) $(INSTALL_SUBDIRS)
