--- a/arch-hg-pkgbuilds/anion-wm-3/PKGBUILD
+++ b/arch-hg-pkgbuilds/anion-wm-3/PKGBUILD
@@ -5,8 +5,9 @@ pkgdesc="anion wm 3"
 arch=(i686 x86_64)
 url="http://code.google.com/p/anion3/"
 license=('GPL2')
-depends=('libextl-3')
-makedepends=('mercurial' 'rubber' 'texlive-latexextra' 'latex2html')
+depends=('libsm' 'lua')
+makedepends=('mercurial' 'rubber' 'texlive-latexextra' 'latex2html' 'libextl-3' 'libtu-3')
+options=(docs)
 
 _hgroot="https://anion3.googlecode.com/hg/"
 _hgrepo="anion3"
