--- a/riot/Makefile
+++ b/riot/Makefile
@@ -43,6 +43,7 @@ install:
 	done
 
 clean:
-	rm -f $(PKG) $(HSC_HS) $(HSC_C)
-	rm Ginsu/CWString_hsc.c Ginsu/CWString_hsc.h cbits/nomacro.o
-	for i in $(DIRS); do rm -f $$i/*.o $$i/*.hi; done
+	-rm -f $(PKG) $(HSC_HS) $(HSC_C)
+	-rm Ginsu/CWString_hsc.c Ginsu/CWString_hsc.h cbits/nomacro.o
+	-rm -rf dist
+	-for i in $(DIRS); do rm -f $$i/*.o $$i/*.hi; done
